feat: integrate new goreply update
